--- a/frontend/create_update.html
+++ b/frontend/create_update.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>主頁</title>
+    <title>Create & Update</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,6 +13,8 @@
             padding: 0;
             display: flex;
             flex-direction: column;
+            justify-content: center;
+            align-items: center;
             min-height: 100vh;
         }
         .sticky {
@@ -20,7 +22,7 @@
             position: fixed;
             top: 0;
             width: 100%;
-            padding: 20px 20px;
+            padding: 15px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
             z-index: 1000;
             display: flex;
@@ -28,7 +30,7 @@
             align-items: center;
         }
         .sticky p {
-            margin: 0;
+            margin-left: 15PX;
             color: #fff;
             font-weight: bold;
         }
@@ -54,39 +56,58 @@
             transform: scale(1.05);
         }
         .main {
-            margin-top: 200px;
             text-align: center;
             padding: 20px;
             flex: 1;
+        }
+        .container {
+            max-width: 400px;
+            margin: 150px auto 50px auto;
+            padding: 20px;
+            background: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
         }
         h2 {
             font-size: 24px;
             color: #333;
         }
-        .button-box1 {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 15px;
-            padding: 20px;
+        fieldset {
+            border: none;
+            padding: 0;
+            margin: 20px 0;
         }
-        .button-box1 a {
-            text-decoration: none;
+        label {
+            font-size: 16px;
+            color: #333;
+            margin-right: 10px;
         }
-        .button1 {
-            background-color: #e3e473;
-            color: #2b2b2b;
-            padding: 25px 30px;
-            border: 1px solid #ecece5;
-            border-radius: 80px;
+        select, input[type="date"], input[type="number"] {
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 14px;
+            margin-bottom: 15px;
+        }
+        button[type="submit"] {
+            background-color: #5abd71;
+            color: #fff;
+            border: none;
+            border-radius: 20px;
+            padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            font-weight: bold;
-            transition: transform 0.2s, background-color 0.3s;
+            transition: background-color 0.3s;
         }
-        .button1:hover {
-            background-color: hsl(45, 74%, 68%);
-            transform: translateY(-3px);
+        button[type="submit"]:hover {
+            background-color: #218838;
+        }
+        a {
+            text-decoration: none;
+            color: #576d9e;
+            font-size: 14px;
+            margin-top: 20px;
+            display: inline-block;
         }
         footer {
             text-align: center;
@@ -98,7 +119,7 @@
         }
     </style>
 </head>
-<body>
+<body> 
     <div class="sticky">
         <p>DMBS Final Project Group 31</p>
         <div class="sticky-right">
@@ -108,13 +129,23 @@
         </div>
     </div>
     <div class="main">
-        <h2>歡迎來到 COVID19 資訊查詢系統</h2>
-        <h2>{{session[username]}}, 想要開始什麼功能呢？</h2>
-        <div class="button-box1">
-            <a href="query.html"><div class="button1">Query</div></a>
-            <a href="delete.html"><div class="button1">Delete</div></a>
-            <a href="create&update.html"><div class="button1">Create</div></a>
-            <a href="create&update.html"><div class="button1">Update</div></a>
+        <div class="container">
+            <h2>Create & Update</h2>
+            <fieldset>
+                <form action="create_update" method="POST">
+                    <label for="country">Country Name:</label>
+                    <select id="country" name="country"></select><br/>
+                    <label for="date">Date:</label>
+                    <input type="date" id="date" name="date"/><br/>
+                    <label for="case">Numbers of cases:</label>
+                    <input type="number" id="case" name="case" min="0"/><br/>
+                    <button type="submit">新增或更新</button>
+                </form>
+            </fieldset>
+            {%if result%}
+                <p>{{result}}</p>
+            {%endif%}
+            <a href="home.html">Back to home page</a>
         </div>
     </div>
     <footer>
