--- a/frontend/create_update.html
+++ b/frontend/create_update.html
@@ -142,10 +142,7 @@
                     <button type="submit">新增或更新</button>
                 </form>
             </fieldset>
-            {%if result%}
-                <p>{{result}}</p>
-            {%endif%}
-            <a href="home.html">Back to home page</a>
+            <a href="./home.html">Back to home page</a>
         </div>
     </div>
     <footer>
