--- a/frontend/delete.html
+++ b/frontend/delete.html
@@ -141,10 +141,7 @@
                     <button type="submit">刪除</button>
                 </form>
             </fieldset>
-            {%if result%}
-                <p>{{result}}</p>
-            {%endif%}
-            <a href="home.html">Back to home page</a>
+            <a href="./home.html">Back to home page</a>
         </div>
     </div>
     <footer>
