--- a/frontend/home.html
+++ b/frontend/home.html
@@ -111,10 +111,10 @@
         <h2>歡迎來到 COVID19 資訊查詢系統</h2>
         <h2>{{session[username]}}, 想要開始什麼功能呢？</h2>
         <div class="button-box1">
-            <a href="query.html"><div class="button1">Query</div></a>
-            <a href="delete.html"><div class="button1">Delete</div></a>
-            <a href="create&update.html"><div class="button1">Create</div></a>
-            <a href="create&update.html"><div class="button1">Update</div></a>
+            <a href="./query.html"><div class="button1">Query</div></a>
+            <a href="./delete.html"><div class="button1">Delete</div></a>
+            <a href="./create_update.html"><div class="button1">Create</div></a>
+            <a href="./create_update.html"><div class="button1">Update</div></a>
         </div>
     </div>
     <footer>
