--- a/frontend/query.html
+++ b/frontend/query.html
@@ -194,7 +194,7 @@
                 <br/>
                 <input type="submit" value="Submit Query"/>
             </fieldset>
-            <a href="home.html">Back to home page</a>
+            <a href="./home.html">Back to home page</a>
         </div>
     </div>
     <footer>
