--- a/frontend/update.html
+++ b/frontend/update.html
@@ -74,12 +74,9 @@
                     <button type="submit">新增或更新</button>
                 </form>
             </fieldset>
-            {%if result%}
-                <p>{{result}}</p>
-            {%endif%}
-            <a href="home.html">Back to home page</a>
+            <a href="./home.html">Back to home page</a>
         </div>
     </div>
-    <script src="create_update.js"></script>
+    <script src="./create_update.js"></script>
 </body>
 </html>
