--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -2,25 +2,60 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>註冊</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
-            color: #000000;
+            color: #333;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
-        h2{
+        .sticky {
+            background-color: #576d9e;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            padding: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .sticky p {
+            margin: 0;
+            color: #fff;
+            font-weight: bold;
+        }
+        .container {
+            max-width: 400px;
+            margin: 150px auto 50px auto;
+            padding: 20px;
+            background: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
             text-align: center;
+        }
+        h2 {
+            font-size: 24px;
+            color: #333;
         }
         form {
             display: flex;
             flex-direction: column;
             gap: 15px;
+            text-align: left;
         }
         label {
-            font-weight: bold;
+            font-size: 16px;
+            color: #333;
             margin-bottom: 5px;
         }
         input[type="text"],
@@ -28,55 +63,61 @@
             padding: 10px;
             font-size: 16px;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 4px;
             width: 100%;
             box-sizing: border-box;
         }
-        .sticky{
-            background-color: blue;
-            position:fixed;
-            top:0px;
-            width:100%;
-            margin:0px;
+        button.signup-btn {
+            background-color: #5abd71;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
-        .container {
-            max-width: 400px;
-            margin: 100px auto;
-            padding: 20px;
-            background: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+        button.signup-btn:hover {
+            background-color: #218838;
         }
-        .sticky-left{
-            float:left;
-            margin:10px 2px;
-            color:#ffffff;
-            display:inline-flex;
-        }
-        .back-to-login{
-            text-align:center;
+        .back-to-login {
+            margin-top: 20px;
         }
         .back-to-login a {
             text-decoration: none;
+            color: #576d9e;
             font-weight: bold;
         }
         .back-to-login a:hover {
             text-decoration: underline;
         }
+        .flash-messages {
+            margin-top: 20px;
+            text-align: left;
+        }
+        .flash-messages ul {
+            list-style: none;
+            padding: 0;
+        }
         .flash-messages .success {
             background-color: #d4edda;
             color: #155724;
             border: 1px solid #c3e6cb;
+            padding: 10px;
+            border-radius: 4px;
         }
         .flash-messages .danger {
             background-color: #f8d7da;
             color: #721c24;
+            border: 1px solid #f5c6cb;
+            padding: 10px;
+            border-radius: 4px;
         }
     </style>
 </head>
 <body> 
     <div class="sticky">
-        <p class="sticky-left">DMBS Final Project Group 31</p>
+        <p>DMBS Final Project Group 31</p>
     </div>
     <div class="container">
         <h2>註冊</h2>
@@ -93,22 +134,20 @@
         </form>
 
         <div class="back-to-login">
-            <p>已經有帳號了嗎? <a href="/">回到登入界面</a></p>
+            <p>已經有帳號了嗎? <a href="./login.html">回到登入界面</a></p>
         </div>
 
-        
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                <div class="flash-messages">
-                    <ul>
-                        {% for category, message in messages %}
-                            <li class="{{ category }}">{{ message }}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            {% endif %}
-            {% endwith %}
-        
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <div class="flash-messages">
+                <ul>
+                    {% for category, message in messages %}
+                        <li class="{{ category }}">{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+        {% endwith %}
     </div>
 </body>
 </html>
